[workspace]
members = [
    "exercises/02_hello_cargo", 
    "exercises/03_guessing_game", 
    "exercises/04_variables", 
    "exercises/05_functions", 
    "exercises/ch03-common-programming-concepts/05_control_flow", 
    "packages/tools"
]
default-members = ["packages/tools"]
resolver = "2"
exclude = [
    "linkchecker", # linkchecker is part of the CI workflow
    "listings",    # these are intentionally distinct from the workspace
    "tmp",         # listings are built here when updating output via tools/update-rustc.sh
]

[workspace.dependencies]
walkdir = "2.3.1"
docopt = "1.1.0"
serde = "1.0"
regex = "1.3.3"
lazy_static = "1.4.0"
flate2 = "1.0.13"
tar = "0.4.26"
